syntax = "proto3";

package model;

service Person {
  rpc getByHash(HashRequest) returns (HashResponse);
}

message HashRequest {
  string hash = 1;
}

message HashResponse {
  int64 id = 1;
  string hash = 2;
  string first_name = 3;
  string last_name = 4;
}
